stop result text from wrapping lines
had to increase max width so it could spread out enough

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ header h1 {
 
 .results p {
 	min-width: 100px;
-	max-width: 400px;
+	max-width: 500px;
 	padding: 10px 30px;
 	border-radius: 10px;
 	font-size: 20px;
